--- a/AnimalSlotsGame/Base.lproj/LaunchScreen.storyboard
+++ b/AnimalSlotsGame/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -12,17 +12,39 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="FIg-O0-JUq">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="ykg-5Q-vRp">
+                                <rect key="frame" x="64" y="363" width="300" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="NWc-Tu-s4a"/>
+                                    <constraint firstAttribute="height" constant="200" id="Vwg-O8-SHA"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="FIg-O0-JUq" secondAttribute="trailing" id="NBn-JZ-2Ea"/>
+                            <constraint firstItem="FIg-O0-JUq" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="TB5-mk-gex"/>
+                            <constraint firstItem="ykg-5Q-vRp" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TxD-Aw-Nwk"/>
+                            <constraint firstItem="ykg-5Q-vRp" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="V09-ky-DfT"/>
+                            <constraint firstAttribute="bottom" secondItem="FIg-O0-JUq" secondAttribute="bottom" id="WCw-0J-KmC"/>
+                            <constraint firstItem="FIg-O0-JUq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="WRt-DF-39H"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="51.86915887850467" y="374.51403887688986"/>
         </scene>
     </scenes>
     <resources>
+        <image name="appLogo" width="358" height="214"/>
+        <image name="background" width="933" height="1600"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
